jupyter/logs.txt
Traceback (most recent call last):
  File "/home/huyle/lab/working/jupyter/draft.py", line 13, in <module>
    eval(eles[145])
  File "<string>", line 1
    {"mlsId":{"label":"MLS#","value":"1451418"},"showMlsId":False,"mlsStatus":"Active","showDatasourceLogo":False,"price":{"value":450000,"level":1},"hideSalePrice":False,"hoa":{"value":349,"level":1},"isHoaFrequencyKnown":True,"sqFt":{"value":1048,"level":1},"pricePerSqFt":{"value":429,"level":1},"lotSize":{"value":1058,"level":1},"beds":1,"baths":1.5,"fullBaths":1,"partialBaths":1,"location":{"value":"Greenview On Barton Creek Condo","level":1},"latLong":{"value":{"latitude":30.2392618,"longitude":-97.7888983},"level":1},"streetLine":{"value":"3600 S Lamar Blvd #214","level":1},"unitNumber":{"value":"#214","level":1},"city":"Austin","state":"TX","zip":"78704","postalCode":{"value":"78704","level":1},"countryCode":"US","showAddressOnMap":True,"soldDate":1626073200000,"searchStatus":1,"propertyType":3,"uiPropertyType":2,"listingType":1,"propertyId":89024392,"listingId":193613466,"dataSourceId":92,"marketId":12,"yearBuilt":{"value":2016,"level":1},"dom":{"value":4,"level":1},"timeOnRedfin":{"value":384385530,"level":1},"originalTimeOnRedfin":{"value":384385576,"level":1},"timeZone":"USu002FCentral","primaryPhotoDisplayLevel":1,"photos":{"value":"0-29:0","level":1},"additionalPhotosInfo":[],"url":"u002FTXu002FAustinu002F3600-S-Lamar-Blvd-78704u002Funit-214u002Fhomeu002F89024392","hasInsight":False,"sashes":[],"keyFacts":[{"description":"1,058 sq ft lot","rank":0},{"description":"$349 HOA","rank":1},{"description":"Garage","rank":2}],"isHot":False,"hasVirtualTour":False,"hasVideoTour":False,"has3DTour":False,"newConstructionCommunityInfo":{},"isRedfin":False,"isActiveKeyListing":False,"isNewConstruction":False,"listingRemarks":"All about location. This beautiful condominium residence is situated next to the Barton Creek Greenbelt off South Lamar. Open Floor plan has a terrace, a modern bedroom with dual sinks and a walk-in showeru002Ftub combination. Large amount of quartz counterspace. Lots of natural light with custom window treatments. Urban style ceiling fand and lighting throughout. 9u00271" ceilings and a nest thermostat. Unit is pre-wired with CAT-6 for high-speed video, has wall mounted TV outlets and under cabinet lighting. Community Amenities include a negative-edge pool, deck and outdoor kitchen.","remarksAccessLevel":1,"businessMarketId":13,"buildingId":106950,"isShortlisted":False}
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ^
SyntaxError: unterminated string literal (detected at line 1)
